[package]
name = "LinkLike_Core"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
scraper = "0.18"
regex = "1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rand = "0.8"
serde_json = "1.0"
base64 = "0.21"
byteorder = "1.4"
crc = "3.0"
md5 = "0.7"
base32 = "0.4"
sha2 = "0.10"
aes = "0.8"
cbc = "0.1"
hex = "0.4"
lz4_flex = "0.11"
snap = "1.1"
chrono = "0.4"
crc32fast = "1.3"